--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://accounts.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://www.google-analytics.com https://accounts.google.com https://*.supabase.co; frame-src https://accounts.google.com;">
     <title>GOATED - #1 AI-powered Trading Assistant</title>
     <meta name="description" content="AI-powered trading assistant that reads charts on your screen and analyzes them automatically in real-time. Not financial advice." />
     <meta name="author" content="Goated AI" />
